# SPIN-ODE

./: .gitignore  .gitmodules  README.md  StiffNeuralODE.py  chem_data.py  chem_k_opt_jax.ipynb  chem_k_opt_jax.py  chemistry.py  estimate.py  jax_data_utils.py  model.py  network.py  nn_jax.py  nnrr-jax-coll.py  nnrr-jax.py  pyproject.toml  readfdat.py  requirements.txt  requirements_ver.txt  slurm.sh  toy_44.def  train_coll.py  train_ode.py  train_utils.py  traj_fit.py  utils.py
configs/: coll_difforigin.yaml  coll_mlpoutput.yaml  crnn_ode.yaml  eqx.yaml  spin.yaml  spin_phyloss.yaml  spin_reduce.yaml
data_t100_dt1_10/: sed_10.csv  sed_4.csv  sed_8.csv  sed_9.csv  toy_44.csv
data_toy_arca/: dataset1.csv  dataset10.csv  dataset2.csv  dataset3.csv  dataset4.csv  dataset5.csv  dataset6.csv  dataset7.csv  dataset8.csv  dataset9.csv
plots/: plot.py
results_t100_dt1_10/: sed_2.csv  sed_3.csv  sed_5.csv  sed_6.csv  sed_7.csv
spin-ode/: data.py  est_rate_diff.py  est_rate_dydt.py  est_rate_traj.py  jax_data_utils.py  manager.py  metrics.py  model.py  plot.py  traj_fit.py  utils.py
spin_ode/: README.md  StiffNeuralODE.py  data.py  est_rate_dydt.py  est_rate_traj.py  jax_data_utils.py  manager.py  metrics.py  model.py  pollu.yaml  toy.yaml  traj_fit.py
